fixed some bugs

--- a/llm_app/templates/index.html
+++ b/llm_app/templates/index.html
@@ -81,7 +81,7 @@
     });
     function openFeedback(response) {
         document.getElementById("popup").style.display = "block";
-        document.getElementById('popup').querySelector('input[name="message_id"]').value = response.id;
+        document.getElementById('popup').querySelector('input[name="response_id"]').value = response.id;
     }
 
     // JavaScript to hide the pop-up when the close button is clicked
